add: Footer finish

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./media1440.css">
     <link rel="stylesheet" href="./media1024.css">
     <link rel="stylesheet" href="./media768.css">
+    <link rel="stylesheet" href="./media360.css">
 </head>
 <body>
     <div class="wrapper">
