add: block_parners

--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
 </head>
 <body>
     <div class="wrapper">
+
+
+<div class="partners _container">
+<div class="partners_left_block">
+    <img id="partners_logo_1" src="./img/partners_1.svg" alt="Meta parters team">
+    <img id="partners_logo_2" src="./img/partners_2.svg" alt="Meta parters team">
+</div>
+<div class="partners_right_block">
+    <h2>224 000$ <br>
+         партнерам</h2>
+         <p>Выполняйте простые дейсвтия что бы <br> помочь нашему проекту набрать обороты.
+            <p>
+            Получайте токены за вашу активность.
+            <p>
+            Переходите в нашего телеграм бота что бы <br> получать ежедневные бонусы.</p>
+            <input type="button" value="Старт" class="button_start">
+</div>
+</div>
+
+
+
      <div class="footer _container">
         <div class="footer_left_block">
             <img src="./img/logo_footer.png" alt="meta">
