add: finish_partners

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,62 +12,63 @@
     <link rel="stylesheet" href="./media768.css">
     <link rel="stylesheet" href="./media360.css">
 </head>
+
 <body>
     <div class="wrapper">
 
 
-<div class="partners _container">
-<div class="partners_left_block">
-    <img id="partners_logo_1" src="./img/partners_1.svg" alt="Meta parters team">
-    <img id="partners_logo_2" src="./img/partners_2.svg" alt="Meta parters team">
-</div>
-<div class="partners_right_block">
-    <h2>224 000$ <br>
-         партнерам</h2>
-         <p>Выполняйте простые дейсвтия что бы <br> помочь нашему проекту набрать обороты.
-            <p>
-            Получайте токены за вашу активность.
-            <p>
-            Переходите в нашего телеграм бота что бы <br> получать ежедневные бонусы.</p>
-            <input type="button" value="Старт" class="button_start">
-</div>
-</div>
-
-
-
-     <div class="footer _container">
-        <div class="footer_left_block">
-            <img src="./img/logo_footer.png" alt="meta">
-            <p>MetaUniversity </br> 
-                Пресоиденяйся к ревалюции обучения</p>
-        </div>
-        <div class="footer_right_block">
-            <p class="footer_right_block_copiright">Все права защищены 2021 </p>
-            <div class="footer_right_block_container_social">
-            <div class="footer_right_block_social">
-                <a href="#">
-                    <img src="./img/tg.svg">    
-            </a>
-                <a href="#">
-                    <img src="./img/tw.svg">    
-            </a>
-                <a href="#">
-                    <img src="./img/fb.svg">    
-            </a>
-                <a href="#">
-                    <img src="./img/in.svg">    
-            </a>
-                <a href="#">
-                    <img src="./img/yout.svg">    
-            </a>
-                <a href="#">
-                    <img src="./img/inst.svg">    
-            </a>
+        <div class="partners _container">
+            <div class="partners_left_block">
+                <img id="partners_logo_1" src="./img/partners_1.svg" alt="Meta parters team">
+                <img id="partners_logo_2" src="./img/partners_2.svg" alt="Meta parters team">
             </div>
-            <p>Политика конфедициальности</p>
+            <div class="partners_right_block">
+                <h2>224 000$ партнерам</h2>
+                <p>Выполняйте простые дейсвтия что бы помочь нашему проекту набрать обороты.
+                <p>
+                    Получайте токены за вашу активность.
+                <p>
+                    Переходите в нашего телеграм бота что бы получать ежедневные бонусы.</p>
+                <input type="button" value="Старт" class="button_start">
+            </div>
         </div>
+
+
+
+        <div class="footer _container">
+            <div class="footer_left_block">
+                <img src="./img/logo_footer.png" alt="meta">
+                <p>MetaUniversity </br>
+                    Пресоиденяйся к ревалюции обучения</p>
+            </div>
+            <div class="footer_right_block">
+                <p class="footer_right_block_copiright">Все права защищены 2021 </p>
+                <div class="footer_right_block_container_social">
+                    <div class="footer_right_block_social">
+                        <a href="#">
+                            <img src="./img/tg.svg">
+                        </a>
+                        <a href="#">
+                            <img src="./img/tw.svg">
+                        </a>
+                        <a href="#">
+                            <img src="./img/fb.svg">
+                        </a>
+                        <a href="#">
+                            <img src="./img/in.svg">
+                        </a>
+                        <a href="#">
+                            <img src="./img/yout.svg">
+                        </a>
+                        <a href="#">
+                            <img src="./img/inst.svg">
+                        </a>
+                    </div>
+                    <p>Политика конфедициальности</p>
+                </div>
+            </div>
         </div>
-     </div>   
     </div>
 </body>
+
 </html>
