add: Tokenomica finish

--- a/index.html
+++ b/index.html
@@ -15,7 +15,81 @@
 
 <body>
     <div class="wrapper">
+        <div class="tokenomica _container">
+            <h2>Токеномика</h2>
+            <div class="tokenomica_full">
+                <div class="tokenomika_line"></div>
+                <div class="tokenomica_left">
+                    <p>На земле 8 милиардов человек ~ по одному токену на человека
+                        первая предпродажа составит 10%, в количестве 800 000 000 монет.
+                        Цена 0.008 $ за токен.Блокировка на 6 месяцев с
+                        последующей постепенной разблакировкой и созданием ликвидности на Pancakeswap и биржах
+                        в течении 6 месяцев по 10% в месяц (для предотврошения спекуляций). Запланированно сжигание 30 %
+                        монет ( по 10% в месяц), что повисит стоимость вашего токена.
+                    </p>
+                </div>
 
+                <div class="tokenomica_right">
+                    <div class="tokenomica_right_text_container">
+                        <div class="tokenomica_right_text">
+                            <p>Публичная продажа</p>
+                        </div>
+                        <div class="tokenomica_right_percent">
+                            <p>40%</p>
+                        </div>
+                    </div>
+                    <div class="tokenomica_right_text_container">
+                        <div id="tokenomica_2" class="tokenomica_right_text">
+                            <p>Сжигание</p>
+                        </div>
+                        <div class="tokenomica_right_percent">
+                            <p>30%</p>
+                        </div>
+                    </div>
+                    <div class="tokenomica_right_text_container">
+                        <div id="tokenomica_3" class="tokenomica_right_text">
+                            <p>Разработчики</p>
+                        </div>
+                        <div class="tokenomica_right_percent">
+                            <p>12%</p>
+                        </div>
+                    </div>
+                    <div class="tokenomica_right_text_container">
+                        <div id="tokenomica_4" class="tokenomica_right_text">
+                            <p>Преподаватели</p>
+                        </div>
+                        <div class="tokenomica_right_percent">
+                            <p>8%</p>
+                        </div>
+                    </div>
+                    <div class="tokenomica_right_text_container">
+                        <div id="tokenomica_5" class="tokenomica_right_text">
+                            <p>Маркетинг</p>
+                        </div>
+                        <div class="tokenomica_right_percent">
+                            <p>6.5%</p>
+                        </div>
+                    </div>
+                    <div class="tokenomica_right_text_container">
+                        <div id="tokenomica_6" class="tokenomica_right_text">
+                            <p>Партнеры</p>
+                        </div>
+                        <div class="tokenomica_right_percent">
+                            <p>3.5%</p>
+                        </div>
+                    </div>
+
+
+
+
+
+                </div>
+            </div>
+
+
+
+
+        </div>
 
         <div class="partners _container">
             <div class="partners_left_block">
